--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-check ! 
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Food Restaurant</title>
+</head>
+<body>
+  <h1>Welcome to Food Restaurant</h1>
+  <!-- Add more HTML content here -->
+
+  <script src="script.js"></script> <!-- You can add a separate JavaScript file if needed -->
+</body>
+</html>
