--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Food Restaurant</title>
 </head>
+  <meta name="google-site-verification" content="3sv5K5JR6E8odA2f18vQATgHE6Jd4YeVF_VV3i7YAl0" />
 <body>
   <h1>Welcome to Food Restaurant</h1>
   <!-- Add more HTML content here -->
