--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-  <h1>Welcome to Food Restaurant</h1>
+  <h1> Website is
+  Under Development</h1>
   <!-- Add more HTML content here -->
 
   <script src="script.js"></script> <!-- You can add a separate JavaScript file if needed -->
