--- a/editable.html
+++ b/editable.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Edit and Display</title>
+</head>
+<body>
 
+<h1>Welcome to the Editable HTML Page</h1>
+
+<!-- This is a placeholder for your editable content -->
+<div id="editable-content" contenteditable="true">
+    <p>Edit and modify this text as needed.</p>
+</div>
+
+<script>
+    // Save the edited content to local storage
+    var editableContent = document.getElementById('editable-content');
+    editableContent.addEventListener('input', function() {
+        localStorage.setItem('editedContent', editableContent.innerHTML);
+    });
+
+    // Load the saved content from local storage
+    var savedContent = localStorage.getItem('editedContent');
+    if (savedContent) {
+        editableContent.innerHTML = savedContent;
+    }
+</script>
+
+</body>
+</html>
