--- a/editable.html
+++ b/editable.html
@@ -11,7 +11,7 @@
 
     <!-- This is a placeholder for your editable content -->
     <div id="editable-content" contenteditable="true">
-        <p>Edit and modify this text as needed.</p>
+        <p>Edit and modify this text as needed. i can edit . </p>
     </div>
 
     <script>
