--- a/index.html
+++ b/index.html
@@ -1,14 +1,136 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Rubellite Inc</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pattern Design</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 1em;
+            text-align: center;
+        }
+
+        section {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 1em;
+            text-align: center;
+        }
+    </style>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var currentYear = new Date().getFullYear();
+            document.getElementById('copyright-year').innerText = '© ' + currentYear + ' Your Company Name. All rights reserved.';
+        });
+    </script>
 </head>
-
 <body>
-  <h1> Website is
-  Under Development</h1>
-  <!-- Add more HTML content here -->
 
-  <script src="script.js"></script> <!-- You can add a separate JavaScript file if needed -->
+    <header>
+        <h1>Pattern Design App</h1>
+    </header>
+
+    <section>
+        <h2>Welcome to Our App Showcase</h2>
+        <p>Explore our innovative iPhone and Mac applications designed to enhance your digital experience.</p>
+        <!-- Add more content as needed -->
+    </section>
+
+    <section>
+        <h2>Features</h2>
+        <ol>
+            <li><strong>Customization Options:</strong>
+                <ul>
+                    <li>Choose from a wide range of base patterns.</li>
+                    <li>Adjust colors, scale, and rotation to create your personalized design.</li>
+                    <li>Explore various pattern types, from geometric to organic, and more.</li>
+                </ul>
+            </li>
+
+            <li><strong>Export Formats:</strong>
+                <ul>
+                    <li>Effortlessly export your creations in PNG, JPEG, and SVG formats.</li>
+                    <li>High-quality exports for versatile use, whether it's for digital or print projects.</li>
+                </ul>
+            </li>
+
+            <li><strong>User-Friendly Interface:</strong>
+                <ul>
+                    <li>Intuitive design tools make creating intricate patterns a breeze.</li>
+                    <li>Easy navigation for both beginners and experienced designers.</li>
+                </ul>
+            </li>
+
+            <li><strong>Save and Edit:</strong>
+                <ul>
+                    <li>Save your designs for future editing or download.</li>
+                    <li>Collaborate with others by sharing editable project files.</li>
+                </ul>
+            </li>
+        </ol>
+    </section>
+
+    <section>
+        <h2>How It Works</h2>
+        <ol>
+            <li><strong>Choose Your Base:</strong>
+                <ul>
+                    <li>Start with a base pattern that sparks your creativity.</li>
+                </ul>
+            </li>
+
+            <li><strong>Customize:</strong>
+                <ul>
+                    <li>Tweak colors, adjust scale, and experiment with rotations until your pattern is perfect.</li>
+                </ul>
+            </li>
+
+            <li><strong>Export:</strong>
+                <ul>
+                    <li>Select your preferred format (PNG, JPEG, or SVG) and save or share your masterpiece.</li>
+                </ul>
+            </li>
+        </ol>
+    </section>
+
+    <section>
+        <h2>Benefits</h2>
+        <ul>
+            <li><strong>Versatility:</strong> Create patterns suitable for various purposes, including textiles, wallpapers, digital backgrounds, and more.</li>
+            <li><strong>Time-Efficient:</strong> Save time with our user-friendly interface, allowing you to focus on the creative process.</li>
+            <li><strong>Professional Outputs:</strong> Export in high-quality formats for professional use in graphic design, web development, and beyond.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Start Designing Today</h2>
+        <p>Join Pattern Design now and turn your creative visions into stunning pattern designs. Experience the freedom to customize and the joy of bringing your ideas to life. Let your imagination flourish with every click!</p>
+    </section>
+
+
+
+    <footer>
+        <p id="copyright-year">&copy; 2024 Rubellite Ltd. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
+
