--- a/index.html
+++ b/index.html
@@ -3,6 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Website Under Development</title>
+</head>
+<body>
+    <header>
+        <h1>Welcome to Our Under-Development Website</h1>
+    </header>
+    
+    <main>
+        <p>We're working hard to bring you an amazing website. Stay tuned for updates!</p>
+    </main>
+
+    <footer>
+        <p>Contact us:</p>
+        <form action="mailto:your@email.com" method="post" enctype="text/plain">
+            Name: <input type="text" name="name"><br>
+            Email: <input type="email" name="email"><br>
+            Message: <textarea name="message" rows="4" cols="50"></textarea><br>
+            <input type="submit" value="Send">
+        </form>
+    </footer>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pattern Design</title>
     <style>
         body {
