--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <footer>
         <p>Contact us:</p>
-        <form action="mailto:your@email.com" method="post" enctype="text/plain">
+        <form action="mailto:rubellites@icloud.com" method="post" enctype="text/plain">
             Name: <input type="text" name="name"><br>
             Email: <input type="email" name="email"><br>
             Message: <textarea name="message" rows="4" cols="50"></textarea><br>
