--- a/index.html
+++ b/index.html
@@ -3,25 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Under Development</title>
+    <title>Under Development</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2;
+        }
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            text-align: center;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Our Under-Development Website</h1>
-    </header>
-    
-    <main>
-        <p>We're working hard to bring you an amazing website. Stay tuned for updates!</p>
-    </main>
-
-    <footer>
-        <p>Contact us:</p>
-        <form action="mailto:rubellites@icloud.com" method="post" enctype="text/plain">
-            Name: <input type="text" name="name"><br>
-            Email: <input type="email" name="email"><br>
-            Message: <textarea name="message" rows="4" cols="50"></textarea><br>
-            <input type="submit" value="Send">
-        </form>
-    </footer>
+    <div class="container">
+        <h1>Website Under Development</h1>
+        <p>We're currently working on something awesome. Stay tuned!</p>
+        <p>In the meantime, you can <a href="https://www.instagram.com/shop_rubellite">visit our instagram</a>.</p>
+    </div>
 </body>
 </html>
