--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Under Development </title>
+    <title>Under Development</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,7 +37,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Website Under Development main</h1>
+        <h1> Rubellite Ltd </h1>
+        <h1>Website Under Development </h1>
         <p>We're currently working on something awesome. Stay tuned!</p>
         <p>In the meantime, you can <a href="https://www.instagram.com/shop_rubellite">visit our instagram</a>.</p>
     </div>
