--- a/SumitApp'sPrivacyPolicy.html
+++ b/SumitApp'sPrivacyPolicy.html
@@ -1,1 +1,96 @@
-Add policy here ...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px 10%;
+            text-align: center;
+        }
+        main {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #ffffff;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h1, h2, h3 {
+            color: #4CAF50;
+        }
+        p {
+            margin: 10px 0;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #f1f1f1;
+            font-size: 14px;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Privacy Policy</h1>
+</header>
+
+<main>
+    <h2>Introduction</h2>
+    <p>We value your privacy and are committed to protecting your personal information. This privacy policy explains how we collect, use, and safeguard the data of users who use our Year 1 Math Learning App.</p>
+
+    <h2>Information We Collect</h2>
+    <p>We may collect the following types of information:</p>
+    <ul>
+        <li>Personal Information: Name, email address (if provided).</li>
+        <li>Usage Data: App activity, progress tracking, and achievements.</li>
+        <li>Device Information: Device type, operating system, and app version.</li>
+    </ul>
+
+    <h2>How We Use Your Information</h2>
+    <p>The information we collect is used to:</p>
+    <ul>
+        <li>Enhance the user experience within the app.</li>
+        <li>Track learning progress and award achievements.</li>
+        <li>Improve app performance and resolve issues.</li>
+    </ul>
+
+    <h2>Data Sharing and Security</h2>
+    <p>We do not share your personal data with third parties, except as required by law or to protect the app’s integrity. We implement robust security measures to ensure your information remains secure.</p>
+
+    <h2>Third-Party Services</h2>
+    <p>The app may include links to third-party services. We are not responsible for the privacy practices of these services, and we encourage you to review their policies.</p>
+
+    <h2>Children’s Privacy</h2>
+    <p>The app is designed for children, but we prioritize protecting their data. We collect only essential data to support learning activities and do not request unnecessary personal information.</p>
+
+    <h2>Changes to This Privacy Policy</h2>
+    <p>We may update this privacy policy periodically. Any changes will be posted within the app, and we encourage you to review it regularly.</p>
+
+    <h2>Contact Us</h2>
+    <p>If you have any questions about this privacy policy or your data, please contact us at: <a href="mailto:support@mathlearningapp.com">support@mathlearningapp.com</a>.</p>
+</main>
+
+<footer>
+    <p>Copyright &copy; SumIt 2025. All rights reserved.</p>
+</footer>
+
+</body>
+</html>
+
