--- a/Wordbook.PrivacyPolicy.html
+++ b/Wordbook.PrivacyPolicy.html
@@ -72,7 +72,7 @@
 
         <h2>5. Contact</h2>
         <p>If you have any questions or concerns about privacy, feel free to contact us at:</p>
-        <p class="email">📧 support@yourappname.com</p>
+        <p class="email">📧 tradesphere@icloud.com</p>
     </div>
 </body>
 </html>
