--- a/Wordbookm.html
+++ b/Wordbookm.html
@@ -271,7 +271,7 @@
             <a href="#apps" onclick="hideMenu()">Our Apps</a>
             <a href="#about" onclick="hideMenu()">About Us</a>
             <a href="#contact" onclick="hideMenu()">Contact</a>
-         <a href="#PrivacyPolicy" onclick="hideMenu()">Privacy Policy</a>
+         <a href="#privacypolicy" onclick="hideMenu()">Privacy Policy</a>
         </nav>
        
 
@@ -332,7 +332,7 @@
             <p>we specialize in creating innovative and high-quality Apple apps that enhance user experience and productivity. We are a team of passionate developers, designers, and strategists committed to innovation and excellence.</p>
         </section>
 
-          <section id="Privacy Policy" class="content">
+          <section id="privacypolicy" class="content">
             <h2>Privacy Policy Us</h2>
             <p>we specialize in creating innovative and high-quality Apple apps that enhance user experience and productivity. We are a team of passionate developers, designers, and strategists committed to innovation and excellence.</p>
         </section>
