--- a/Wordbookm.html
+++ b/Wordbookm.html
@@ -333,7 +333,7 @@
         </section>
 
           <section id="privacypolicy" class="content">
-            <h2>Privacy Policy Us</h2>
+            <h2>Privacy Policy</h2>
             <p>we specialize in creating innovative and high-quality Apple apps that enhance user experience and productivity. We are a team of passionate developers, designers, and strategists committed to innovation and excellence.</p>
         </section>
 
