--- a/WOrdbookSupport.html
+++ b/WOrdbookSupport.html
@@ -40,11 +40,11 @@
 </head>
 <body>
 
-  <a href="file:///Users/gnaaz/Documents/WEB%20Wordbook/ALLAPPHOME.html" class="back-button">← Back to Home</a>
+  <a href="https://rubellite-ltd.github.io/Wordbook.html" class="back-button">← Back to Home</a>
 
-  <h1>Wordbook App</h1>
-  <p>Welcome to the Wordbook app!</p>
-  <!-- App content goes here -->
+<!--  <h1>Wordbook App</h1>-->
+<!--  <p>Welcome to the Wordbook app!</p>-->
+<!--  <!-- App content goes here -->
   
   <section id="contact" class="content">
              <h2>Contact Us</h2>
