--- a/Wordbook/index.html
+++ b/Wordbook/index.html
@@ -383,8 +383,8 @@
       <nav class="nav-links" id="navLinks">
 <!--        <a href="index.html">Home</a>-->
 <a href="#home" onclick="hideMenu()">Home</a>
-        <a href="file:///Users/gnaaz/Documents/WEB%20Wordbook/Contentsof%20WRDB.html">Wordbook</a>
-        <a href="file:///Users/gnaaz/Documents/WEB%20Wordbook/WOrdbookSupport.html">Contact Us</a>
+        <a href="https://rubellite-ltd.github.io/Wordbook.html">Wordbook</a>
+        <a href="https://rubellite-ltd.github.io/WOrdbookSupport.html">Contact Us</a>
         <a href="#about" onclick="hideMenu()">About Us</a>
 <!--        <a href="#contact" onclick="hideMenu()">Contact</a>-->
      <a href="#privacypolicy" onclick="hideMenu()">Privacy Policy</a>
