--- a/WOrdbookSupport.html
+++ b/WOrdbookSupport.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 
-  <a href="https://rubellite-ltd.github.io/Wordbook.html" class="back-button">← Back to Home</a>
+  <a href="https://rubellite-ltd.github.io/Wordbook/index.html" class="back-button">← Back to Home</a>
 
 <!--  <h1>Wordbook App</h1>-->
 <!--  <p>Welcome to the Wordbook app!</p>-->
