--- a/Wordbook/index.html
+++ b/Wordbook/index.html
@@ -383,9 +383,10 @@
       <nav class="nav-links" id="navLinks">
 <!--        <a href="index.html">Home</a>-->
 <a href="#home" onclick="hideMenu()">Home</a>
-        <a href="https://rubellite-ltd.github.io/Wordbook.html">Wordbook</a>
-        <a href="https://rubellite-ltd.github.io/WOrdbookSupport.html">Contact Us</a>
-        <a href="#about" onclick="hideMenu()">About Us</a>
+      <!--  <a href="https://rubellite-ltd.github.io/Wordbook.html">Wordbook</a> -->
+    <!--     <a href="https://rubellite-ltd.github.io/WOrdbookSupport.html">Contact Us</a> -->
+           <a href="#wrdbok" onclick="hideMenu()">Wordbook</a>
+          <a href="#contact" onclick="hideMenu()">Contact</a>
 <!--        <a href="#contact" onclick="hideMenu()">Contact</a>-->
      <a href="#privacypolicy" onclick="hideMenu()">Privacy Policy</a>
      
@@ -402,7 +403,7 @@
 <!--    <nav id="nav-menu">-->
 <!--            <a href="#home" onclick="hideMenu()">Home</a>-->
 <!--            <a href="#apps" onclick="hideMenu()">Our Apps</a>-->
-<!--            <a href="#about" onclick="hideMenu()">About Us</a>-->
+<!--            <a href="#wrdbok" onclick="hideMenu()">Wordbook</a>-->
 <!--            <a href="#contact" onclick="hideMenu()">Contact</a>-->
 <!--         <a href="#privacypolicy" onclick="hideMenu()">Privacy Policy</a>-->
 <!--        </nav>-->
@@ -467,8 +468,8 @@
 <!--            </div>-->
          
         </section>
-        <section id="about" class="content">
-            <h2>About Us</h2>
+        <section id="wrdbok" class="content">
+            <h2>WordBook</h2>
             <p>we specialize in creating innovative and high-quality Apple apps that enhance user experience and productivity. We are a team of passionate developers, designers, and strategists committed to innovation and excellence.</p>
         </section>
 
