--- a/Wordbook/index.html
+++ b/Wordbook/index.html
@@ -475,8 +475,11 @@
 
           <section id="privacypolicy" class="content">
             <h2>Privacy Policy</h2>
-            <p>we specialize in creating innovative and high-quality Apple apps that enhance user experience and productivity. We are a team of passionate developers, designers, and strategists committed to innovation and excellence.</p>
-        </section>
+<p>
+  We specialize in creating innovative and high-quality Apple apps that enhance user experience and productivity. 
+  We are a team of passionate developers, designers, and strategists committed to innovation and excellence. 
+  <a href="https://rubellite-ltd.github.io/Wordbook.PrivacyPolicy.html" target="_blank" rel="noopener noreferrer">More</a>
+</p>        </section>
 
         
         <section id="contact" class="content">
