--- a/Wordbook/index.html
+++ b/Wordbook/index.html
@@ -806,6 +806,16 @@
          nav.classList.toggle('show');
        }
      </script>
+
+<footer class="footer">
+  <p>© <span id="year"></span> Rubellite Ltd. WordBook is a trading name of Rubellite Ltd. Registered in England & Wales No. 13504030.</p>
+  <p>Contact us: <a href="mailto:tradesphere@icloud.com" style="color:#fff;">tradesphere@icloud.com</a></p>
+</footer>
+
+<script>
+  // Set the current year dynamically
+  document.getElementById('year').textContent = new Date().getFullYear();
+</script>
     
 </body>
 </html>
