--- a/Wordbook.PrivacyPolicy.html
+++ b/Wordbook.PrivacyPolicy.html
@@ -73,7 +73,7 @@
 </head>
 <body>
 
-    <a href="https://rubellite-ltd.github.io/Wordbook/index.html" class="back-button">← Back to Home</a>
+    <a href="https://rubellite-ltd.github.io" class="back-button">← Back to Home</a>
     <div class="container">
         <h1>Privacy Policy</h1>
         <p><strong>Effective Date: June 22, 2025</strong></p>
