--- a/index.html
+++ b/index.html
@@ -802,10 +802,16 @@
       <a href="https://www.instagram.com/shop_rubellite" target="_blank" title="Instagram" style="color:#ccc; transition: color 0.3s;"><i class="fab fa-instagram"></i></a>
     </div>
   </div>
+  
 
   <p style="margin: 10px 0;">&copy; <span id="year"></span> Rubellite Ltd. WordBook is a trading name of Rubellite Ltd. Registered in England & Wales No. 13504030.</p>
 
   <p style="margin: 10px 0;">Contact us: <a href="#" id="email-link" style="color: #fff; text-decoration: underline;">Email Us</a></p>
+  <div style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:15px;">
+    <div style="flex:1; text-align:center;">
+    </div>
+    <a href="privacy.html" style="color:#ccc; text-decoration:none;">Privacy Policy</a>
+  </div>
 </footer>
 
 <!-- Footer Scripts -->
