--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
   <div style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:15px;">
     <div style="flex:1; text-align:center;">
     </div>
-    <a href="privacy.html" style="color:#ccc; text-decoration:none;">Privacy Policy</a>
+    <a href="https://rubellite-ltd.github.io/Wordbook.PrivacyPolicy.html" style="color:#ccc; text-decoration:none;">Privacy Policy</a>
   </div>
 </footer>
 
